...
            app:layout_anchor="@id/appbarlayout"
            app:layout_anchorGravity="end|bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:backgroundTint="@color/colorWhite"
            android:id="@+id/toggle_favorite"
            android:layout_marginEnd="20dp"
            app:borderWidth="0dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
